// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select accepts initial value 1`] = `
<div
  className="grommetux-select"
  onClick={[Function]}
>
  <input
    className="grommetux-input grommetux-select__input"
    placeholder={undefined}
    readOnly={true}
    type="text"
    value="one"
  />
  <button
    aria-label="Select Icon"
    className="grommetux-button grommetux-button--plain grommetux-select__control"
    disabled={false}
    href={undefined}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <span
      className="grommetux-button__icon"
    >
      <svg
        aria-label="caret-down"
        className="grommetux-control-icon grommetux-control-icon-caret-down grommetux-control-icon--responsive"
        height="24px"
        role="img"
        version="1.1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <polygon
          fill="none"
          points="22 8 12 20 2 8"
          stroke="#000"
          strokeWidth="2"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Select has correct default options 1`] = `
<div
  className="grommetux-select"
  onClick={[Function]}
>
  <input
    className="grommetux-input grommetux-select__input"
    placeholder={undefined}
    readOnly={true}
    type="text"
    value=""
  />
  <button
    aria-label="Select Icon"
    className="grommetux-button grommetux-button--plain grommetux-select__control"
    disabled={false}
    href={undefined}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <span
      className="grommetux-button__icon"
    >
      <svg
        aria-label="caret-down"
        className="grommetux-control-icon grommetux-control-icon-caret-down grommetux-control-icon--responsive"
        height="24px"
        role="img"
        version="1.1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <polygon
          fill="none"
          points="22 8 12 20 2 8"
          stroke="#000"
          strokeWidth="2"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Select inline + multiple 1`] = `
<div
  className="grommetux-select grommetux-select--inline"
>
  <ol
    className="grommetux-select__options"
    onClick={undefined}
  >
    <li
      className="grommetux-select__option grommetux-select__option--selected"
      onClick={undefined}
    >
      <label
        className="grommetux-check-box"
        htmlFor="one"
      >
        <span>
          <input
            checked={true}
            className="grommetux-check-box__input"
            disabled={undefined}
            id="one"
            name={undefined}
            onChange={[Function]}
            tabIndex="0"
            type="checkbox"
          />
          <span
            className="grommetux-check-box__control"
          >
            <svg
              className="grommetux-check-box__control-check"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <path
                d="M6,11.3 L10.3,16 L18,6.2"
                fill="none"
              />
            </svg>
          </span>
        </span>
        <span
          className="grommetux-check-box__label"
        >
          one
        </span>
      </label>
    </li>
    <li
      className="grommetux-select__option"
      onClick={undefined}
    >
      <label
        className="grommetux-check-box"
        htmlFor="two"
      >
        <span>
          <input
            checked={false}
            className="grommetux-check-box__input"
            disabled={undefined}
            id="two"
            name={undefined}
            onChange={[Function]}
            tabIndex="0"
            type="checkbox"
          />
          <span
            className="grommetux-check-box__control"
          >
            <svg
              className="grommetux-check-box__control-check"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <path
                d="M6,11.3 L10.3,16 L18,6.2"
                fill="none"
              />
            </svg>
          </span>
        </span>
        <span
          className="grommetux-check-box__label"
        >
          two
        </span>
      </label>
    </li>
  </ol>
</div>
`;

exports[`Select inline 1`] = `
<div
  className="grommetux-select grommetux-select--inline"
>
  <ol
    className="grommetux-select__options"
    onClick={undefined}
  >
    <li
      className="grommetux-select__option grommetux-select__option--selected"
      onClick={undefined}
    >
      <label
        className="grommetux-radio-button"
        htmlFor="one"
      >
        <input
          checked={true}
          className="grommetux-radio-button__input"
          id="one"
          onChange={[Function]}
          type="radio"
        />
        <span
          className="grommetux-radio-button__control"
        />
        <span
          className="grommetux-radio-button__label"
        >
          one
        </span>
      </label>
    </li>
    <li
      className="grommetux-select__option"
      onClick={undefined}
    >
      <label
        className="grommetux-radio-button"
        htmlFor="two"
      >
        <input
          checked={false}
          className="grommetux-radio-button__input"
          id="two"
          onChange={[Function]}
          type="radio"
        />
        <span
          className="grommetux-radio-button__control"
        />
        <span
          className="grommetux-radio-button__label"
        >
          two
        </span>
      </label>
    </li>
  </ol>
</div>
`;
